--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "start:react": "react-scripts start",
     "prebuild": "run-s build:tailwind",
     "build": "react-scripts build",
-    "serve": "npm run build && serve -s build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "npm run build && serve -s build"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +57,7 @@
     "chokidar-cli": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.35",
+    "serve": "^12.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3"
   }
 }
